--- a/Project.toml
+++ b/Project.toml
@@ -9,6 +9,7 @@ BusinessDays = "4f18b42c-503e-5345-9536-bb0f25fc7038"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
+Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
 YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
 
